2011-01-18  Robert Hogan  <robert@webkit.org>

        Reviewed by Simon Hausmann.

        [Qt] http/tests/incremental/slow-utf8-text.pl fails
        https://bugs.webkit.org/show_bug.cgi?id=44282

        * platform/qt/Skipped:

2011-01-18  Michael Saboff  <msaboff@apple.com>

        Reviewed by Oliver Hunt.

        <rdar://problem/8875432> Regression: Some text-only e-mails cause hang beneath RegExp::match (52540)
        https://bugs.webkit.org/show_bug.cgi?id=52540
        https://bugs.webkit.org/show_bug.cgi?id=52662

        New tests to check for proper linking of parentheses nested under
        a non-capturing parentheses.

        * fast/regex/parentheses-expected.txt:
        * fast/regex/script-tests/parentheses.js:

2011-01-18  David Hyatt  <hyatt@apple.com>

        Reviewed by Dan Bernstein.

        <rdar://problem/8479998> REGRESSION (r67660): broken button layout at devforums.apple.com
        
        Exclude floating objects from shrinking to avoid floats.  They should never do this.  Timing-related bugs could
        occur as a result of this mistake, and the change to rewrite pagination to defer layout of floats until they
        got encountered on the correct line exposed this issue.

        Added /fast/block/float/float-overflow-hidden-containing-block-width.html.
        * fast/block/float/float-overflow-hidden-containing-block-width.html: Added.
        * platform/mac/fast/block/float/float-overflow-hidden-containing-block-width-expected.checksum: Added.
        * platform/mac/fast/block/float/float-overflow-hidden-containing-block-width-expected.png: Added.
        * platform/mac/fast/block/float/float-overflow-hidden-containing-block-width-expected.txt: Added.

2011-01-18  Dmitry Titov  <dimich@chromium.org>

        [Chromium] Not reviewed, updated expectations for tests
        affected by http://trac.webkit.org/changeset/76047

        * platform/chromium-mac/fast/backgrounds/size/backgroundSize22-expected.checksum: